Add back button to admin and updated site access password placeholder

--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,13 @@
 <body>
     <div class="container">
         <header>
-            <h1>Dashboard Admin</h1>
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
+                <a href="index.html" class="vote-btn" style="text-decoration: none;">
+                    <i data-lucide="arrow-left"></i> Home
+                </a>
+                <h1>Dashboard Admin</h1>
+                <div style="width: 80px;"></div> <!-- Spacer per centrare il titolo -->
+            </div>
             <p class="subtitle">Trascina le foto per caricarle e visualizza la classifica in tempo reale.</p>
         </header>
 
