Add like/dislike toggle, instant updates, ranking page

--- a/admin.html
+++ b/admin.html
@@ -43,7 +43,9 @@
                     <tr>
                         <th>Anteprima</th>
                         <th>Nome File</th>
-                        <th>Voti</th>
+                        <th>👍 Like</th>
+                        <th>👎 Dislike</th>
+                        <th>Punteggio</th>
                         <th>Azioni</th>
                     </tr>
                 </thead>
