--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <header>
             <h1>Galleria Fotografica</h1>
             <p class="subtitle">Scegli le tue foto preferite e lascia un voto!</p>
+            <div class="nav-links">
+                <a href="classifica.html" class="nav-link">
+                    <i data-lucide="trophy"></i> Classifica
+                </a>
+            </div>
         </header>
 
         <main id="photo-container" class="photo-grid">
