Add full-screen lightbox and subtitle to ranking page

--- a/classifica.html
+++ b/classifica.html
@@ -25,6 +25,8 @@
                 <div style="width: 100px;"></div>
             </div>
             <p class="subtitle">Le foto più amate dalla community</p>
+            <p class="subtitle" style="font-size: 0.9rem; margin-top: 0.5rem; color: var(--primary);">Le foto più votate
+                verranno stampate e posizionate nei vari uffici</p>
         </header>
 
         <main id="ranking-container">
