--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container page-hidden">
         <header>
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
                 <a href="index.html" class="vote-btn" style="text-decoration: none;">
