--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container page-hidden">
         <header>
             <div style="display: flex; justify-content: space-between; align-items: center;">
                 <div style="width: 44px;"></div>
