feat: Add admin photo selection interface with bulk download capability.

--- a/admin.html
+++ b/admin.html
@@ -16,11 +16,17 @@
 <body>
     <div class="container page-hidden">
         <header>
-            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
-                <a href="index.html" class="vote-btn" style="text-decoration: none;">
-                    <i data-lucide="arrow-left"></i> Home
-                </a>
-                <h1>Dashboard Admin</h1>
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem;">
+                <div style="display: flex; gap: 1rem; align-items: center;">
+                    <a href="index.html" class="vote-btn" style="text-decoration: none;">
+                        <i data-lucide="arrow-left"></i> Sito
+                    </a>
+                    <a href="selezione.html" class="vote-btn"
+                        style="text-decoration: none; background: rgba(74, 222, 128, 0.1); border-color: var(--primary);">
+                        <i data-lucide="check-square"></i> Selezione Stampa
+                    </a>
+                </div>
+                <h1 style="margin: 0;">Dashboard Admin</h1>
                 <div style="width: 80px;"></div> <!-- Spacer per centrare il titolo -->
             </div>
             <p class="subtitle">Trascina le foto per caricarle e visualizza la classifica in tempo reale.</p>
