--- a/selezione.html
+++ b/selezione.html
@@ -85,6 +85,8 @@
             justify-content: center;
             backdrop-filter: blur(5px);
             cursor: zoom-out;
+            opacity: 0;
+            transition: opacity 0.3s ease;
         }
 
         .lightbox img {
